@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Correctly handle NONE subtreasure list in treasure list.
+Nicolas Weeger 2010-02-28
+
 Simplify code.
 Nicolas Weeger 2010-02-28
 
